<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My App</string>
    <string name="hello_world">Hello, world!</string>
    <string name="confirm_sos_text">Are you sure you want to send an SOS?</string>
    <string name="send_sos_button_text">Send SOS</string>
    <string name="sos_sent_text">SOS sent!</string>
    <string name="sos_not_sent_text">SOS not sent.</string>
    <string name="error_message">An error occurred.</string>
    <string name="ok_button_text">OK</string>
    <string name="welcome_message">Welcome to Anthena Guard</string>
    <string name="sos_button_text">Send SOS </string>
    <string name="community_button_text">Community Tab </string>
    <string name="tutorial_button_text">Empowerher</string>
    <string name="profile_button_text">View Profile </string>
    <string name="sos_activity_title">Send sos </string>
    <string name="sos_send_button_text">SOS sent!</string>
    <string name="Anthena_Guard">Anthena Guard</string>
    <string name="safety_beacon_button">Safety Beacon</string>
    <string name="Guardian_angel">Guardian Angel</string>
    <string name="help">Self-defense is protection\n\t
    Walking home alone and feeling uneasy? Getting a weird vibe from a stranger on the bus? Many of us have been there.

    In a January 2018 survey of 1,000 women nationwide, 81 percent reported experiencing some form of sexual harassment, assault, or both in their lifetime.

    Verbal harassment was the most common form, but 51 percent of women said they were touched or groped in an unwelcome way, while 27 percent of women survived sexual assault.

    Even if you’ve personally never felt yourself in a situation that made you feel physically unsafe, having reassurance about your next steps (and what you can do to help yourself should the unfortunate circumstance ever happen) can make all the difference.

    A study from the University of Oregon found that women who participated in a self-defense class felt they:

    had better safety strategies in place
    were more equipped to deal with strangers, and people they know, in the context of potential assault or abuse
    had more positive feelings about their bodies
    had increased self-confidence
    Below are our top eight self-defense moves for women — complete with instructions — to help you feel empowered to defend yourself in any situation.

    Focus on the vulnerable areas
    Focus on your attacker’s vulnerable places: eyes, nose, throat, and groin. Aim all of the moves below at one or several of these areas to have maximum impact.

    AVOID THE CHEST AND KNEES
    Don’t aim for the chest, as that tends to be ineffective. Aiming for the knees requires a specific kick that can be too risky for the average person.

    Use all of your force and aggression during execution. Make it known that you’re a powerful lady. Use your voice, too. Be loud to intimidate the attacker and create attention in case somebody is nearby.

    1. Hammer strike
    Using your car keys is one of the easiest ways to defend yourself. Don’t use your fingernails, because you’re more at risk to injure your hands.

    Instead, if you feel unsafe while walking at night, have your keys stick out from one side of your fist for hammer strikes.

    Another way to use your keys is to click them onto a lanyard to swing at your attacker.

    To perform:

    Hold your key ring in a tight fist, like holding a hammer, with keys extending from the side of your hand.
    Thrust downward toward your target.
    2. Groin kick
    If someone is coming at you from the front, a groin kick may deliver enough force to paralyze your attacker, making your escape possible.

    To perform:

    Stabilize yourself as best you can.
    Lift your dominant leg off the ground and begin to drive your knee upward.
        Extend your dominant leg, drive hips forward, slightly lean back, and kick </string>
</resources>
